--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <script src="https://kit.fontawesome.com/c9965d23bb.js" crossorigin="anonymous"></script>
     </head>
     <!-- ==================================================================================== -->
-    <!-- =============================== ---- Release 0.0 =============================== -->
+    <!-- =============================== June 2022 Release 1.0 =============================== -->
     <!-- ==================================================================================== -->
     <body>
         <div class="container">
