--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <script src="https://kit.fontawesome.com/c9965d23bb.js" crossorigin="anonymous"></script>
     </head>
     <!-- ==================================================================================== -->
-    <!-- =============================== June 2022 Release 1.1 =============================== -->
+    <!-- =============================== June 2022 Release 1.1.1 =============================== -->
     <!-- ==================================================================================== -->
     <body>
         <div class="container">
@@ -44,7 +44,7 @@
         </div>
 
         <footer class="footer">
-            <p class="image-details"><a href="https://www.unsplash.com">Source of all images is Unsplash</a></p>
+            <p class="image-details"><a href="https://www.unsplash.com">Image Source: Unsplash</a></p>
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script>
