--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1>Get a Random Pic with a Click</h1>
 
             <div class="button-container">
-                <button id="btn">Click Me</button>
+                <button id="btn" class="button">Click Me</button>
             </div>
     
             <div class="picker-container">
