--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" 
-                content="width=device-width, initial-scale=1.0">
-        <title>Get a Pic with a Click</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Unsplash photos generated at random"
+        <meta name="keywords" content="pictures, photos, background photo, images, unsplash, picture, photo, image, free images, free photos"
+        <title>Random Photo Generator</title>
         <!-- Normalize CSS file irons out some difference between browsers -->
-        <link rel="stylesheet" 
-                href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <!-- Google Fonts-->
         <link 
                 href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" 
@@ -15,17 +15,17 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/nano.min.css"/> <!-- 'nano' theme -->
 
         <!-- CSS File-->
-        <link rel="stylesheet" 
-                href="./css/style.css">
-        
+        <link rel="stylesheet" href="./css/style.css">
         <script src="https://kit.fontawesome.com/c9965d23bb.js" crossorigin="anonymous"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7356875210051999"
+        crossorigin="anonymous"></script>
     </head>
     <!-- ==================================================================================== -->
     <!-- =============================== June 2022 Release 1.2 =============================== -->
     <!-- ==================================================================================== -->
     <body>
         <div class="container">
-            <h1>Get a Random Pic with a Click</h1>
+            <h1>Get a Random Pic with just a Click</h1>
 
             <div class="button-container">
                 <button id="btn" class="button">Click Me</button>
